--- a/lab05/index.html
+++ b/lab05/index.html
@@ -1,14 +1,63 @@
 <!DOCTYPE html>
 <html lang="zh-Hant-TW">
-  <head>
-    <meta charset="utf-8">
-    <title>D3 Page Template</title>
-    <script src="http://d3js.org/d3.v6.min.js" charset="utf-8"></script> <!-- v6.5.0 -->
+
+<head>
+  <meta charset="utf-8">
+  <title>Lab</title>
+  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> <!-- v6.5.0 -->
+  <style type="text/css">
+    div {
+      border: 1px black solid;
+      padding: 10px;
+      margin: 5px;
+      display: inline-block;
+      width: 5px;
+      height: 75px;
+      background-color: green;
+    }
+
+    div {
+      border: 1px black solid;
+      padding: 20px;
+    }
+  </style>
 </head>
+
 <body>
-    <script type="text/javascript">
-      // Your beautiful D3 code will go here
-    </script>
-  </body>
+  <script type="text/javascript">
+    // Your beautiful D3 code will go here
+
+    d3.text("data.csv",function(data){
+      var parsedCSV = d3.csv.parseRows(data);
+      d3.select("body")
+        .selectAll("div")
+        .data(parsedCSV)
+        .enter()
+        .append("div")
+        .filter(function (d, i) {
+          return (i != 0);
+        })
+        .attr("class", "bar")
+        .style("height", function (d) {
+          return d[1] + "px";
+        });
+    });
+
+    // d3.csv("data.csv", function (data) {
+    //   d3.select("body")
+    //     .selectAll("div")
+    //     .data(data)
+    //     .enter()
+    //     .append("div")
+    //     .attr("class", "bar")
+    //     .style("height", "bar")
+    // })
+    // var dataset = [5, 10, 15, 20, 25];
+    // d3.selectAll("div")
+    //   .data(dataset)
+    //   .enter()
+    //   .append("div")
+    //   .attr("class", "bar");
+  </script>
+
 </html>
-  
