--- a/lab05/index.html
+++ b/lab05/index.html
@@ -1,63 +1,118 @@
 <!DOCTYPE html>
-<html lang="zh-Hant-TW">
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
-  <title>Lab</title>
-  <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script> <!-- v6.5.0 -->
+  <title>Lab05</title>
+  <script src="https://d3js.org/d3.v6.min.js" charset="utf-8"></script> <!-- v6.5.0 -->
   <style type="text/css">
-    div {
-      border: 1px black solid;
-      padding: 10px;
-      margin: 5px;
-      display: inline-block;
-      width: 5px;
-      height: 75px;
-      background-color: green;
-    }
-
-    div {
-      border: 1px black solid;
-      padding: 20px;
+    .bar {
+      fill: #B10000;
     }
   </style>
 </head>
 
 <body>
   <script type="text/javascript">
-    // Your beautiful D3 code will go here
 
-    d3.text("data.csv",function(data){
-      var parsedCSV = d3.csv.parseRows(data);
-      d3.select("body")
-        .selectAll("div")
-        .data(parsedCSV)
+    var svg = d3.select("body").append("svg")
+      .attr("width", window.innerWidth * 2 / 3 + 60)
+      .attr("height", window.innerHeight * 2 / 3 + 50)
+      .append("g")// used for x, y lengend
+      .attr("transform",
+        "translate(" + 40 + "," + 20 + ")");
+
+    var rowConverter = function (d) {
+      return {
+        GB: parseInt(d.組界), /*GB =  Group Boundary*/
+        frequency: parseInt(d.頻率)
+      };
+    }
+
+    d3.csv("./data.csv", rowConverter).then(function (data) {
+      data.forEach(function (d) {
+        d.GB = +d.GB;
+      });
+      // set the ranges
+      var x = d3.scaleBand()
+        .range([0, window.innerWidth * 2 / 3])
+        .padding(0.2);
+      var y = d3.scaleLinear()
+        .range([window.innerHeight * 2 / 3, 0]);
+
+      // Scale the range of the data in the domains
+      x.domain(data.map(function (d) { return d.GB; }));
+      y.domain([0, d3.max(data, function (d) { return d.frequency; })]);
+      console.log(d3.max(data, function (d) { return d.frequency; }))
+
+      svg.selectAll("rect")
+        .data(data)
         .enter()
-        .append("div")
-        .filter(function (d, i) {
-          return (i != 0);
-        })
+        .append("rect")
         .attr("class", "bar")
-        .style("height", function (d) {
-          return d[1] + "px";
-        });
+        .attr("x", function (d) {
+          return x(d.GB)
+        })
+        .attr("y", function (d) {
+          return window.innerHeight * 2 / 3
+        })
+        .attr("width", x.bandwidth())
+        .attr("height", 0);
+
+      svg.selectAll("text")
+        .data(data)
+        .enter()
+        .append("text")
+        .text(function (d) {
+          return d.frequency;
+        })
+        .attr("id", "amt")
+        .attr("x", function (d) {
+          return x(d.GB) + (x.bandwidth()) / 2 - 20 / 2;
+        })
+        .attr("y", function (d) { return window.innerHeight * 2 / 3 - 20 / 2 - ((window.innerHeight * 2 / 3 / (d3.max(data, function (d) { return d.frequency; }))) * d.frequency) })
+        .attr("font-family", "sans-serif")
+        .attr("font-size", 0 + "px");
+
+      svg.append("g")
+        .attr("id", "xaxis")
+        .attr("transform", "translate(0," + window.innerHeight * 2 / 3 + ")")
+        .call(d3.axisBottom(x));
+
+      // add the y Axis
+      svg.append("g")
+        .attr("id", "yaxis")
+        .call(d3.axisLeft(y));
+
+      // Animation
+      svg.selectAll("#amt")
+        .transition()
+        .duration(800)
+        .attr("font-size", 20 + "px");
+
+      svg.select("#xaxis")
+        .selectAll("text")
+        .transition()
+        .duration(800)
+        .attr("transform", "rotate(36)");
+
+      svg.select("#yaxis")
+        .selectAll("text")
+        .transition()
+        .duration(800)
+        .attr("transform", "rotate(36)");
+
+      svg.selectAll("rect")
+        .transition()
+        .duration(800)
+        .attr("y", function (d) { return y(d.frequency); })
+        .attr("height", function (d) { return window.innerHeight * 2 / 3 - y(d.frequency); })
+
+
+      console.log(data);
     });
 
-    // d3.csv("data.csv", function (data) {
-    //   d3.select("body")
-    //     .selectAll("div")
-    //     .data(data)
-    //     .enter()
-    //     .append("div")
-    //     .attr("class", "bar")
-    //     .style("height", "bar")
-    // })
-    // var dataset = [5, 10, 15, 20, 25];
-    // d3.selectAll("div")
-    //   .data(dataset)
-    //   .enter()
-    //   .append("div")
-    //   .attr("class", "bar");
   </script>
+</body>
 
 </html>
