--- a/lab07/index.html
+++ b/lab07/index.html
@@ -67,7 +67,7 @@
     <hr>
     <div id='lee' class='name-character'></div>
     <div id='tsz' class='name-character'></div>
-    <div id='kin' class='name-character'></div>
+<!--     <div id='kin' class='name-character'></div> -->
   </div>
 
   <div>
@@ -77,7 +77,7 @@
     </br>
     <div id='svg-drop' class='name-character'></div>
     <div id='svg-drop' class='name-character'></div>
-    <div id='svg-drop' class='name-character'></div>
+<!--     <div id='svg-drop' class='name-character'></div> -->
     </br>
   </div>
 
@@ -87,7 +87,7 @@
     window.addEventListener('load', function () {
       loadByPathAndAnimateNameCharacter('./Chen.svg', '#lee');
       loadByPathAndAnimateNameCharacter('./Shen.svg', '#tsz');
-      loadByPathAndAnimateNameCharacter('./Chen.svg', '#kin');
+//       loadByPathAndAnimateNameCharacter('./Chen.svg', '#kin');
 
       document.getElementById('drop-file').addEventListener('dragover', (evt) => {
         evt.preventDefault();
