--- a/lab09/index.html
+++ b/lab09/index.html
@@ -138,7 +138,7 @@
 
 		function make_subtitle(){
 
-			d3.text('Monster-English.srt', function(data){
+			d3.text('lyrics.srt', function(data){
 				console.log(data);
 				//alert(data);
 
